--- a/Meowies/Views/MainWindow.axaml
+++ b/Meowies/Views/MainWindow.axaml
@@ -6,15 +6,62 @@
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         x:Class="Meowies.Views.MainWindow"
         x:DataType="vm:MainWindowViewModel"
-        Icon="/Assets/avalonia-logo.ico"
-        Title="Meowies">
+        Icon="/Assets/Icons/paw.png"
+        Title="Meowies"
+        >
 
     <Design.DataContext>
         <!-- This only sets the DataContext for the previewer in an IDE,
              to set the actual DataContext for runtime, set the DataContext property in code (look at App.axaml.cs) -->
         <vm:MainWindowViewModel/>
     </Design.DataContext>
-
-    <TextBlock Text="{Binding Greeting}" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-
+    <Border>
+        <Border.Background>
+            <LinearGradientBrush StartPoint="0%,0%" EndPoint="0%,100%">
+                <GradientStop Offset="0" Color="#DBBFFF" />
+                <GradientStop Offset="1" Color="#F2E8FF" />
+            </LinearGradientBrush>
+        </Border.Background>
+        <Grid Background="White" Width="700" Height="850" HorizontalAlignment="Center" VerticalAlignment="Center">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="220"/>
+            <RowDefinition Height="100"/>
+            <RowDefinition Height="400"/>
+        </Grid.RowDefinitions>
+        <StackPanel>
+            <TextBlock FontSize="55" FontFamily="Actor" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0 30 0 20">
+                <Run Text="Welcome to" Foreground="#B57CFF"/>
+                <Run Text="Meowies!" Foreground="#742BEB"/>
+            </TextBlock>
+            <TextBlock FontSize="30" HorizontalAlignment="Center" Margin="10">
+                <Run Text="The best platform" Foreground="#B57CFF"/>
+                <Run Text="ever" Foreground="#742BEB"/>
+                <Run Text="for saving" Foreground="#B57CFF"/>
+            </TextBlock>
+            <TextBlock FontSize="30" HorizontalAlignment="Center">
+                <Run Text="every movie you’d like to watch!" Foreground="#B57CFF"></Run>
+            </TextBlock>
+        </StackPanel>
+        <Border Grid.Row="1" BoxShadow="0 0 25 10 #F2E8FF" HorizontalAlignment="Left" Margin="180 0 0 0" 
+                Height="45" Width="140" CornerRadius="23">
+            <Button Background="Transparent" Foreground="#C69AFF" HorizontalAlignment="Center" VerticalAlignment="Center"
+                    HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontSize="18"
+            >Sign in</Button>
+        </Border>
+        <Border Grid.Row="1" BoxShadow="0 0 25 10 #F2E8FF" HorizontalAlignment="Right" Margin="0 0 180 0" 
+                Height="45" Width="140" CornerRadius="23" Background="#C69AFF">
+            <Button Background="Transparent" Foreground="White" HorizontalAlignment="Center" VerticalAlignment="Center"
+                    HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontSize="18"
+            >Sign up
+            </Button>
+        </Border>
+        <Image Grid.Row="2" Source="../Assets/cats.png" Width="550" Height="550"></Image>
+        
+    </Grid>
+    </Border>
+    
+    
+    
+    
+    
 </Window>
