--- a/Meowies/Views/MainWindow.axaml
+++ b/Meowies/Views/MainWindow.axaml
@@ -25,9 +25,36 @@
                 <GradientStop Offset="1" Color="#F2E8FF" />
             </LinearGradientBrush>
         </Border.Background>
-        <Grid RowDefinitions="*,Auto" Margin="10" Background="White" Width="850">
+        <Grid Margin="10" Background="White" Width="850">
             <TransitioningContentControl Content="{Binding CurrentPage}" />
-            <StackPanel Grid.Row="1" Orientation="Horizontal" Spacing="5" Margin="25"
+
+            <StackPanel VerticalAlignment="Top" Height="60" Orientation="Horizontal" Width="850" HorizontalAlignment="Center">
+                <Button Content="Meowies" FontSize="40" Foreground="#C69AFF" Background="Transparent" 
+                        VerticalAlignment="Center" Margin="20 0 30 0" 
+                        Command="{Binding TrendingCommand}"/>
+                <TextBox Width="320" Watermark="Search" CornerRadius="15" VerticalAlignment="Center"
+                         Foreground="#742BEB" BorderThickness="2" BorderBrush="#DBBFFF" Margin="23 0"/>
+                <Button HorizontalAlignment="Right" Width="30" Height="30" VerticalAlignment="Center" Margin="13 0"
+                        Background="Transparent" Command="{Binding SearchCommand}">
+                    <Image Source="../Assets/Icons/search.png" Width="30" Height="30"/>
+                </Button>
+                <Button HorizontalAlignment="Right" Width="40" Height="40" VerticalAlignment="Center" Margin="13 0"
+                        Background="Transparent" Command="{Binding RandomCommand}">
+                    <Image Source="../Assets/Icons/dices.png" Width="40" Height="40"/>
+                </Button>
+                <Button HorizontalAlignment="Right" Width="30" Height="30" VerticalAlignment="Center" Margin="13 0"
+                        Background="Transparent" Command="{Binding FavouritesCommand}">
+                    <Image Source="../Assets/Icons/heart.png" Width="30" Height="30"/>
+                </Button>
+                <Button HorizontalAlignment="Right" Width="40" Height="40" VerticalAlignment="Center" Margin="13 0"
+                        Background="Transparent" Command="{Binding CatCommand}">
+                    <Image Source="../Assets/Icons/cat.png" Width="40" Height="40"/>
+                </Button>
+            </StackPanel>
+            
+            <Line StartPoint="0,60" EndPoint="1000,60" Stroke="#DBBFFF" StrokeThickness="4"/>
+            
+            <StackPanel Orientation="Horizontal" Spacing="5" Margin="25" VerticalAlignment="Bottom"
                         HorizontalAlignment="Center">
                 <Border BoxShadow="0 0 25 10 #F2E8FF" HorizontalAlignment="Left" Margin="0 0 30 0" 
                         Height="45" Width="140" CornerRadius="23">
