--- a/Meowies/Views/FavouritesView.axaml
+++ b/Meowies/Views/FavouritesView.axaml
@@ -12,5 +12,17 @@
     <Design.DataContext>
         <vm:FavouritesViewModel/>
     </Design.DataContext>
-    <TextBlock>Favourites</TextBlock>
+    <Grid>
+        <TextBlock>Bookmarks!</TextBlock>
+        <!--<ItemsControl ItemsSource="{Binding Bookmarks}">
+            <ItemsPanelTemplate>
+                <WrapPanel/>
+            </ItemsPanelTemplate>
+        </ItemsControl>-->
+        
+        
+        
+        
+        
+    </Grid>
 </UserControl>
