--- a/Meowies/Views/ProfileView.axaml
+++ b/Meowies/Views/ProfileView.axaml
@@ -12,6 +12,39 @@
     <Design.DataContext>
         <vm:ProfileViewModel/>
     </Design.DataContext>
-    <TextBlock>User Profile</TextBlock>
-    
+    <Grid RowDefinitions="100, 45, 80, 80, 80, 80, 220" Height="700" VerticalAlignment="Center" Width="600">
+        <TextBlock Grid.Row="0" FontSize="50" HorizontalAlignment="Center">
+            <Run Text="Hi," Foreground="#B57CFF"></Run>
+            <Run Text="Username" Foreground="#742BEB"></Run>
+        </TextBlock>
+        <TextBlock Grid.Row="1" FontSize="25" Text="Wanted to change something?" Foreground="#B57CFF" 
+                   HorizontalAlignment="Center"/>
+        <Border Grid.Row="2" CornerRadius="25" BorderBrush="#C69AFF" BorderThickness="2"
+                Width="400" Height="45" HorizontalAlignment="Center" >
+            <Button Foreground="#742BEB" HorizontalAlignment="Center" FontSize="20" Width="400" Height="45"
+                    HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Content="Change name"
+                    CornerRadius="25" Background="Transparent"/>
+        </Border>
+        <Border Grid.Row="3" CornerRadius="25" BorderBrush="#C69AFF" BorderThickness="2"
+                Width="400" Height="45" HorizontalAlignment="Center">
+            <Button Foreground="#742BEB" HorizontalAlignment="Center" FontSize="20" Width="400" Height="45"
+                    HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Content="Change email"
+                    CornerRadius="25" Background="Transparent"/>
+        </Border>
+        <Border Grid.Row="4" CornerRadius="25" BorderBrush="#C69AFF" BorderThickness="2"
+                Width="400" Height="45" HorizontalAlignment="Center">
+            <Button Foreground="#742BEB" HorizontalAlignment="Center" FontSize="20" Width="400" Height="45"
+                    HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Content="Change password"
+                    CornerRadius="25" Background="Transparent"/>
+        </Border>
+        <Border Grid.Row="5" CornerRadius="25" BorderBrush="#C69AFF" BorderThickness="2"
+                Width="400" Height="45" HorizontalAlignment="Center">
+            <Button Foreground="#742BEB" HorizontalAlignment="Center" FontSize="20" Width="400" Height="45"
+                    HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Content="Change birthday"
+                    CornerRadius="25" Background="Transparent"/>
+        </Border>
+        
+        <Image Grid.Row="6" Source="../Assets/Icons/playing cat.png" Width="200" Height="200" HorizontalAlignment="Left"
+               VerticalAlignment="Bottom"/>
+    </Grid>
 </UserControl>
