--- a/Meowies/Views/MainWindow.axaml
+++ b/Meowies/Views/MainWindow.axaml
@@ -9,14 +9,7 @@
         Icon="/Assets/Icons/paw.png"
         Title="Meowies"
         SystemDecorations="Full"
-        WindowState="Maximized"
-        >
-
-    <Design.DataContext>
-        <!-- This only sets the DataContext for the previewer in an IDE,
-             to set the actual DataContext for runtime, set the DataContext property in code (look at App.axaml.cs) -->
-        <vm:MainWindowViewModel/>
-    </Design.DataContext>
+        WindowState="Maximized">
     
     <Border>
         <Border.Background>
@@ -26,7 +19,6 @@
             </LinearGradientBrush>
         </Border.Background>
         <Grid Margin="10" Background="White" Width="850">
-            <TransitioningContentControl Content="{Binding CurrentPage}" />
             <StackPanel Background="White" VerticalAlignment="Top" Height="60" Width="850" Orientation="Horizontal" 
                         HorizontalAlignment="Center">
                 <Grid ColumnDefinitions="Auto, *, Auto, Auto, Auto, Auto">
@@ -60,32 +52,8 @@
                     </Button>
                 </Grid>
             </StackPanel>
-            
             <Line StartPoint="0,60" EndPoint="1000,60" Stroke="#DBBFFF" StrokeThickness="4"/>
-            
-            <StackPanel Orientation="Horizontal" Spacing="5" Margin="25" VerticalAlignment="Bottom"
-                        HorizontalAlignment="Center">
-                <Grid ColumnDefinitions="*, *">
-                    <Border Grid.Column="0" BoxShadow="0 0 25 10 #F2E8FF" HorizontalAlignment="Left" Margin="0 0 30 0" 
-                            Height="45" Width="140" CornerRadius="23">
-                        <Button Background="Transparent" Foreground="#C69AFF" HorizontalAlignment="Center" VerticalAlignment="Center"
-                                HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontSize="18"
-                                Height="45" Width="140" CornerRadius="23"
-                                Command="{Binding NavigatePreviousCommand}"
-                                Content="{Binding Previous}"
-                        ></Button>
-                    </Border>
-                    <Border Grid.Column="1" BoxShadow="0 0 25 10 #F2E8FF" HorizontalAlignment="Right" Margin="30 0 0 0" 
-                            Height="45" Width="140" CornerRadius="23" Background="#C69AFF">
-                        <Button Background="Transparent" Foreground="White" HorizontalAlignment="Center" VerticalAlignment="Center"
-                                HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontSize="18"
-                                Height="45" Width="140" CornerRadius="23"
-                                Command="{Binding NavigateNextCommand}" 
-                                Content="{Binding Next}"
-                        ></Button>
-                    </Border>
-                </Grid>
-            </StackPanel>
+            <TransitioningContentControl Content="{Binding CurrentPage}" />
         </Grid>
     </Border>
     
