--- a/Meowies/Views/ProfileView.axaml
+++ b/Meowies/Views/ProfileView.axaml
@@ -9,42 +9,31 @@
              x:CompileBindings="True"
              x:DataType="vm:ProfileViewModel"
              mc:Ignorable="d">
-    <Design.DataContext>
-        <vm:ProfileViewModel/>
-    </Design.DataContext>
-    <Grid RowDefinitions="100, 45, 80, 80, 80, 80, 220" Height="700" VerticalAlignment="Center" Width="600">
-        <TextBlock Grid.Row="0" FontSize="50" HorizontalAlignment="Center">
-            <Run Text="Hi," Foreground="#B57CFF"></Run>
-            <Run Text="Username" Foreground="#742BEB"></Run>
-        </TextBlock>
-        <TextBlock Grid.Row="1" FontSize="25" Text="Wanted to change something?" Foreground="#B57CFF" 
-                   HorizontalAlignment="Center"/>
-        <Border Grid.Row="2" CornerRadius="25" BorderBrush="#C69AFF" BorderThickness="2"
-                Width="400" Height="45" HorizontalAlignment="Center" >
-            <Button Foreground="#742BEB" HorizontalAlignment="Center" FontSize="20" Width="400" Height="45"
-                    HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Content="Change name"
-                    CornerRadius="25" Background="Transparent"/>
-        </Border>
-        <Border Grid.Row="3" CornerRadius="25" BorderBrush="#C69AFF" BorderThickness="2"
-                Width="400" Height="45" HorizontalAlignment="Center">
-            <Button Foreground="#742BEB" HorizontalAlignment="Center" FontSize="20" Width="400" Height="45"
-                    HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Content="Change email"
-                    CornerRadius="25" Background="Transparent"/>
-        </Border>
-        <Border Grid.Row="4" CornerRadius="25" BorderBrush="#C69AFF" BorderThickness="2"
-                Width="400" Height="45" HorizontalAlignment="Center">
-            <Button Foreground="#742BEB" HorizontalAlignment="Center" FontSize="20" Width="400" Height="45"
-                    HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Content="Change password"
-                    CornerRadius="25" Background="Transparent"/>
-        </Border>
-        <Border Grid.Row="5" CornerRadius="25" BorderBrush="#C69AFF" BorderThickness="2"
-                Width="400" Height="45" HorizontalAlignment="Center">
-            <Button Foreground="#742BEB" HorizontalAlignment="Center" FontSize="20" Width="400" Height="45"
-                    HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Content="Change birthday"
-                    CornerRadius="25" Background="Transparent"/>
-        </Border>
-        
-        <Image Grid.Row="6" Source="../Assets/Icons/playing cat.png" Width="200" Height="200" HorizontalAlignment="Left"
-               VerticalAlignment="Bottom"/>
+    
+    <Grid>
+        <ContentControl Content="{Binding CurrentProfile}"/>
+        <StackPanel Orientation="Horizontal" Spacing="5" Margin="25" VerticalAlignment="Bottom"
+                    HorizontalAlignment="Center">
+            <Grid ColumnDefinitions="*, *">
+                <Border Grid.Column="0" BoxShadow="0 0 25 10 #F2E8FF" HorizontalAlignment="Left" Margin="0 0 30 0" 
+                        Height="45" Width="140" CornerRadius="23">
+                    <Button Background="Transparent" Foreground="#C69AFF" HorizontalAlignment="Center" VerticalAlignment="Center"
+                            HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontSize="18"
+                            Height="45" Width="140" CornerRadius="23"
+                            Command="{Binding NavigatePreviousCommand}"
+                            Content="{Binding Previous}"
+                    ></Button>
+                </Border>
+                <Border Grid.Column="1" BoxShadow="0 0 25 10 #F2E8FF" HorizontalAlignment="Right" Margin="30 0 0 0" 
+                        Height="45" Width="140" CornerRadius="23" Background="#C69AFF">
+                    <Button Background="Transparent" Foreground="White" HorizontalAlignment="Center" VerticalAlignment="Center"
+                            HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontSize="18"
+                            Height="45" Width="140" CornerRadius="23"
+                            Command="{Binding NavigateNextCommand}" 
+                            Content="{Binding Next}"
+                    ></Button>
+                </Border>
+            </Grid>
+        </StackPanel>
     </Grid>
 </UserControl>
