--- a/Meowies/Views/MovieView.axaml
+++ b/Meowies/Views/MovieView.axaml
@@ -10,6 +10,74 @@
              x:DataType="vm:MovieViewModel"
              mc:Ignorable="d">
     
-    <TextBlock>Movie Page</TextBlock>
-    
+    <Grid Width="850" Height="800" HorizontalAlignment="Center" VerticalAlignment="Center"
+          ColumnDefinitions="2*, 3*, 2*" Background="Transparent" Margin="10">
+        <TextBlock Text="{Binding Message}"/>
+        <StackPanel Grid.Column="0" VerticalAlignment="Center" HorizontalAlignment="Center">
+            <Border BorderBrush="#B57CFF" BorderThickness="2" CornerRadius="5">
+                <Image Source="{Binding Poster}" Margin="10" Stretch="UniformToFill"
+                       Width="200" Height="350"/>
+            </Border>
+            <StackPanel Margin="0 15">
+                <TextBlock Foreground="#5822B1" FontSize="35" HorizontalAlignment="Center" Margin="5"
+                           Text="{Binding Bookmark.docs[0].rating.kp}"/>
+                <TextBlock Foreground="#B57CFF" FontSize="25" HorizontalAlignment="Center" Margin="5"
+                           Text="{Binding Bookmark.docs[0].votes.kp}"/>
+            </StackPanel>
+        </StackPanel>
+        <StackPanel Grid.Column="1" Margin="10" VerticalAlignment="Center">
+            <TextBlock Text="{Binding Bookmark.docs[0].alternativeName}" 
+                       VerticalAlignment="Center" Foreground="#4F13B1" HorizontalAlignment="Center" FontSize="50" 
+                       TextWrapping="Wrap" TextAlignment="Center" Margin="17"/>
+            <StackPanel Margin="17">
+                <TextBlock HorizontalAlignment="Center" FontSize="20">
+                    <Run Text="genres:" Foreground="#742BEB"/>
+                    <Run Text="{Binding Bookmark.docs[0].genres[0].name}" Foreground="#B57CFF"/>
+                    <Run Text="," Foreground="#B57CFF"/>
+                    <Run Text="{Binding Bookmark.docs[0].genres[1].name}" Foreground="#B57CFF"/>
+                </TextBlock>
+                <TextBlock HorizontalAlignment="Center" FontSize="20">
+                    <Run Text="countries:" Foreground="#742BEB"/>
+                    <Run Text="{Binding Bookmark.docs[0].countries[0].name}" Foreground="#B57CFF"/>
+                    <Run Text="," Foreground="#B57CFF"/>
+                    <Run Text="{Binding Bookmark.docs[0].countries[1].name}" Foreground="#B57CFF"/>
+                </TextBlock>
+                <TextBlock HorizontalAlignment="Center" FontSize="20">
+                    <Run Text="length:" Foreground="#742BEB"/>
+                    <Run Text="{Binding Bookmark.docs[0].movieLength}" Foreground="#B57CFF"/>
+                </TextBlock>
+                <TextBlock HorizontalAlignment="Center" FontSize="20">
+                    <Run Text="age:" Foreground="#742BEB"/>
+                    <Run Text="{Binding Bookmark.docs[0].ageRating}" Foreground="#B57CFF"/>
+                    <Run Text="+" Foreground="#B57CFF"/>
+                </TextBlock>
+                <TextBlock HorizontalAlignment="Center" FontSize="20">
+                    <Run Text="release year:" Foreground="#742BEB"/>
+                    <Run Text="{Binding Bookmark.docs[0].year}" Foreground="#B57CFF"/>
+                </TextBlock>
+            </StackPanel>
+            <TextBlock Text="{Binding Bookmark.docs[0].description}" FontSize="20"
+                       HorizontalAlignment="Center" Foreground="#B57CFF" TextWrapping="Wrap" TextAlignment="Center"
+                       VerticalAlignment="Center" Margin="15"/>
+        </StackPanel>
+        <Grid Grid.Column="2" Margin="10" VerticalAlignment="Center">
+            <Line StartPoint="0,0" EndPoint="0,260" Stroke="#DBBFFF" StrokeThickness="4"/>
+            <StackPanel Orientation="Vertical">
+                <TextBlock Text="Cast" HorizontalAlignment="Center" FontSize="20" Margin="13"
+                           Foreground="#742BEB" TextAlignment="Center"/>
+                <TextBlock Text="{Binding Bookmark.docs[0].persons[0].enName}" Foreground="#B57CFF"
+                           FontSize="20" Margin="6" HorizontalAlignment="Center" TextWrapping="Wrap"/>
+                <TextBlock Text="{Binding Bookmark.docs[0].persons[1].enName}" Foreground="#B57CFF"
+                           FontSize="20" Margin="6" HorizontalAlignment="Center" TextWrapping="Wrap"/>
+                <TextBlock Text="{Binding Bookmark.docs[0].persons[2].enName}" Foreground="#B57CFF"
+                           FontSize="20" Margin="6" HorizontalAlignment="Center" TextWrapping="Wrap"/>
+                <TextBlock Text="{Binding Bookmark.docs[0].persons[3].enName}" Foreground="#B57CFF"
+                           FontSize="20" Margin="6" HorizontalAlignment="Center" TextWrapping="Wrap"/>
+                <TextBlock Text="{Binding Bookmark.docs[0].persons[4].enName}" Foreground="#B57CFF"
+                           FontSize="20" Margin="6" HorizontalAlignment="Center" TextWrapping="Wrap"/>
+                <TextBlock Text="{Binding Bookmark.docs[0].persons[5].enName}" Foreground="#B57CFF"
+                           FontSize="20" Margin="6" HorizontalAlignment="Center" TextWrapping="Wrap"/>
+            </StackPanel>
+        </Grid>
+    </Grid>
 </UserControl>
