--- a/Meowies/Views/MainWindow.axaml
+++ b/Meowies/Views/MainWindow.axaml
@@ -29,27 +29,35 @@
                             <Setter Property="Foreground" Value="#C69AFF"></Setter>
                         </Style>
                     </Grid.Styles>
+                    
                     <Button Grid.Column="0" Content="Meowies" FontSize="40" Foreground="#C69AFF" Background="Transparent" 
                             VerticalAlignment="Center" Margin="20 0 30 0"
                             Command="{Binding TrendingCommand}"/>
+                    
                     <TextBox Grid.Column="1" Width="320" Watermark="Search" CornerRadius="15" VerticalAlignment="Center"
-                             Foreground="#742BEB" BorderThickness="2" BorderBrush="#DBBFFF" Margin="10 0"/>
+                             Foreground="#742BEB" BorderThickness="2" BorderBrush="#DBBFFF" Margin="10 0"
+                             Text="{Binding MovieId}"/>
+                    
                     <Button Grid.Column="2" HorizontalAlignment="Right" Width="40" Height="40" VerticalAlignment="Center" Margin="11 0"
                             Background="Transparent" Command="{Binding SearchCommand}">
                         <Image Source="../Assets/Icons/search.png" Width="30" Height="30"/>
                     </Button>
+                    
                     <Button Grid.Column="3" HorizontalAlignment="Right" Width="45" Height="45" VerticalAlignment="Center" Margin="11 0"
                             Background="Transparent" Command="{Binding RandomCommand}">
                         <Image Source="../Assets/Icons/dices.png" Width="40" Height="40"/>
                     </Button>
+                    
                     <Button Grid.Column="4" HorizontalAlignment="Right" Width="40" Height="40" VerticalAlignment="Center" Margin="11 0"
                             Background="Transparent" Command="{Binding FavouritesCommand}">
                         <Image Source="../Assets/Icons/heart.png" Width="30" Height="30"/>
                     </Button>
+                    
                     <Button Grid.Column="5" HorizontalAlignment="Right" Width="45" Height="45" VerticalAlignment="Center" Margin="11 0"
                             Background="Transparent" Command="{Binding CatCommand}">
                         <Image Source="../Assets/Icons/cat.png" Width="40" Height="40"/>
                     </Button>
+                    
                 </Grid>
             </StackPanel>
             <Line StartPoint="0,60" EndPoint="1000,60" Stroke="#DBBFFF" StrokeThickness="4"/>
