--- a/Meowies/Views/FavouritesView.axaml
+++ b/Meowies/Views/FavouritesView.axaml
@@ -4,13 +4,57 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:vm="using:Meowies.ViewModels"
-             d:DesignHeight="450"
-             d:DesignWidth="800"
+             xmlns:models="clr-namespace:Meowies.Models"
+             d:DesignHeight="1600"
+             d:DesignWidth="3200"
              x:CompileBindings="True"
              x:DataType="vm:FavouritesViewModel"
              mc:Ignorable="d">
     
-    <Grid>
-        <TextBlock>Bookmarks!</TextBlock>
+    
+    <UserControl.Resources>
+        <DataTemplate x:Key="My.DataTemplates.BookmarkItem" DataType="models:BookmarkItem">
+            <Grid Height="100" Width="500" ColumnDefinitions="Auto, *, Auto" HorizontalAlignment="Center">
+                <Border Grid.Column="0" CornerRadius="5" BorderBrush="#B57CFF" BorderThickness="2">
+                    <Image Source="../Assets/Icons/cat.png" Height="100" Width="100" Stretch="UniformToFill"/>
+                </Border>
+                <StackPanel Grid.Column="1" Orientation="Vertical" VerticalAlignment="Center">
+                    <TextBlock Text="{Binding docs[0].alternativeName}" Foreground="#5822B1"
+                               FontSize="20" VerticalAlignment="Center" Margin="9"/>
+                    <StackPanel Orientation="Horizontal" VerticalAlignment="Center">
+                        <TextBlock Foreground="#B57CFF" Margin="9" FontSize="20">
+                            <Run Text="{Binding docs[0].genres[0].name}"/>
+                            <Run Text=","/>
+                            <Run Text="{Binding docs[0].genres[1].name}"/>
+                        </TextBlock>
+                        <TextBlock Text="{Binding docs[0].rating.kp}" Foreground="#7D4192" 
+                                   Margin="9" FontSize="20"/>
+                        <TextBlock Text="{Binding docs[0].ageRating}" Foreground="#B57CFF" 
+                                   Margin="9" FontSize="20"/>
+                    </StackPanel>
+                </StackPanel>
+                
+                <Button Grid.Column="2" Width="50" Height="50" Background="Transparent">
+                    <Image Source="../Assets/Icons/trash.png"/>
+                </Button>
+            </Grid>
+        </DataTemplate>
+    </UserControl.Resources>
+
+    <UserControl.DataTemplates>
+        <DataTemplate DataType="models:BookmarkItem">
+            <StackPanel Height="101" Margin="0 10 0 0 ">
+                <ContentControl Content="{Binding}" ContentTemplate="{DynamicResource My.DataTemplates.BookmarkItem}" />
+            </StackPanel>
+        </DataTemplate>
+    </UserControl.DataTemplates>
+
+    <Grid Background="Transparent" Height="500" Width="800" RowDefinitions="75, *, Auto">
+        <StackPanel Grid.Row="0" Orientation="Vertical">
+            <TextBlock Text="Bookmarks!" Foreground="#B57CFF" FontSize="35" Margin="15" HorizontalAlignment="Center"/>
+        </StackPanel>
+        <ListBox Grid.Row="1" ItemsSource="{Binding Bookmarks}" Width="550" Background="White"/>
+        <Image Grid.Row="2" Source="../Assets/Icons/toyger-cat.png" Height="100" Width="100" Stretch="Uniform" Margin="0 200 600 0 "/>
+        <Image Grid.Row="2" Source="../Assets/Icons/butterfly.png" Height="40" Width="40" Stretch="Uniform" Margin="0 100 550 0"/>
     </Grid>
 </UserControl>
