--- a/Meowies/Views/MainWindow.axaml
+++ b/Meowies/Views/MainWindow.axaml
@@ -39,7 +39,7 @@
                     
                     <TextBox Grid.Column="1" Width="320" Watermark="Search" CornerRadius="15" VerticalAlignment="Center"
                              Foreground="#742BEB" BorderThickness="2" BorderBrush="#DBBFFF" Margin="10 0"
-                             Text="{Binding MovieId}"/>
+                             Text="{Binding SearchName}"/>
                     
                     <Button Grid.Column="2" HorizontalAlignment="Right" Width="40" Height="40" VerticalAlignment="Center" Margin="11 0"
                             Background="Transparent" Command="{Binding SearchCommand}">
@@ -63,7 +63,7 @@
                     
                 </Grid>
             </StackPanel>
-            <Line StartPoint="0,60" EndPoint="1000,60" Stroke="#DBBFFF" StrokeThickness="4"/>
+            <Line StartPoint="0,60" EndPoint="1000,60" Stroke="#DBBFFF" StrokeThickness="4" ClipToBounds="True"/>
             <TransitioningContentControl Content="{Binding CurrentPage}" />
         </Grid>
         </Grid>
