--- a/Meowies/Views/SearchView.axaml
+++ b/Meowies/Views/SearchView.axaml
@@ -11,18 +11,21 @@
              x:DataType="vm:SearchViewModel"
              mc:Ignorable="d">
 
-    
     <UserControl.Resources>
         <DataTemplate x:Key="My.DataTemplates.BookmarkList" DataType="models:BookmarkList">
             <Grid ColumnDefinitions="55, 270" HorizontalAlignment="Center">
-                <Border Grid.Column="0" CornerRadius="5" BorderBrush="#B57CFF" BorderThickness="2"
+               <Border Grid.Column="0" CornerRadius="5" BorderBrush="#B57CFF" BorderThickness="2"
                         HorizontalAlignment="Left">
                     <Image Source="../Assets/Icons/cat.png" Height="50" Width="50" Stretch="UniformToFill"/>
                 </Border>
                 <StackPanel Grid.Column="1" Orientation="Vertical" VerticalAlignment="Center" HorizontalAlignment="Center">
-                    <TextBlock Text="{Binding docs[0].name}" Foreground="#5822B1"
-                               FontSize="20" VerticalAlignment="Center" HorizontalAlignment="Center" 
-                               TextAlignment="Center"/>
+                    <Button Background="White" 
+                            Content="{Binding docs[0].name}" 
+                            Foreground="#5822B1" Height="35"
+                            Command = "{Binding $parent[ListBox].((vm:SearchViewModel)DataContext).SearchSwitch}"
+                            CommandParameter="{Binding docs[0]}"
+                            Width="270" VerticalAlignment="Center" FontSize="20"
+                            HorizontalContentAlignment="Center" BorderThickness="0"/>
                     <StackPanel Orientation="Horizontal" VerticalAlignment="Center">
                         <TextBlock Foreground="#B57CFF" FontSize="17">
                             <Run Text="{Binding docs[0].genres[0].name}"/>
@@ -33,7 +36,7 @@
                                    FontSize="20" Margin="9 0 0 0"/>
                     </StackPanel>
                 </StackPanel>
-            </Grid>
+                </Grid>
         </DataTemplate>
         
         <DataTemplate x:Key="My.DataTemplates.ActorList" DataType="models:ActorList">
@@ -76,6 +79,13 @@
     </UserControl.DataTemplates>
 
     <Grid Height="750" ClipToBounds="True" RowDefinitions="90, *, 200">
+        
+        
+        
+        <!--<ContentControl Content="{Binding CurrentPage}"/>-->
+
+        
+        
         <TextBlock Grid.Row="0" Text="Search results!" Foreground="#B57CFF" FontSize="35" Margin="15" HorizontalAlignment="Center"/>
         <Grid Grid.Row="1" ColumnDefinitions="*, *" Height="525">
             <ListBox Grid.Column="0" ItemsSource="{Binding Bookmarks}" Background="White"/>
@@ -90,3 +100,4 @@
 <!--<Button Grid.Column="1" Width="50" Height="50" Background="Transparent">
                     <Image Source="../Assets/Icons/trash.png"/>
                 </Button>-->
+<!--Command="{Binding $parent[ListBox].((vm:SearchViewModel)DataContext).SwitchCommand}" -->
