--- a/Meowies/Views/SearchView.axaml
+++ b/Meowies/Views/SearchView.axaml
@@ -12,34 +12,34 @@
              mc:Ignorable="d">
 
     <UserControl.Resources>
-        <DataTemplate x:Key="My.DataTemplates.BookmarkList" DataType="models:BookmarkList">
+        <DataTemplate x:Key="My.DataTemplates.BookmarkDoc" DataType="models:BookmarkDoc">
             <Grid ColumnDefinitions="55, 270" HorizontalAlignment="Center">
                <Border Grid.Column="0" CornerRadius="5" BorderBrush="#B57CFF" BorderThickness="2"
                         HorizontalAlignment="Left">
                     <Image Source="../Assets/Icons/cat.png" Height="50" Width="50" Stretch="UniformToFill"/>
                 </Border>
                 <StackPanel Grid.Column="1" Orientation="Vertical" VerticalAlignment="Center" HorizontalAlignment="Center">
-                    <Button Background="White" 
-                            Content="{Binding docs[0].name}" 
+                    <Button Background="Transparent" 
+                            Content="{Binding name}" 
                             Foreground="#5822B1" Height="35"
-                            Command = "{Binding $parent[ListBox].((vm:SearchViewModel)DataContext).SearchSwitch}"
-                            CommandParameter="{Binding docs[0]}"
+                            Command = "{Binding $parent[ListBox].((vm:SearchViewModel)DataContext).BookmarkSearchSwitch}"
+                            CommandParameter="{Binding }"
                             Width="270" VerticalAlignment="Center" FontSize="20"
                             HorizontalContentAlignment="Center" BorderThickness="0"/>
-                    <StackPanel Orientation="Horizontal" VerticalAlignment="Center">
+                    <StackPanel Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="Center">
                         <TextBlock Foreground="#B57CFF" FontSize="17">
-                            <Run Text="{Binding docs[0].genres[0].name}"/>
+                            <Run Text="{Binding genres[0].name}"/>
                             <Run Text=","/>
-                            <Run Text="{Binding docs[0].genres[1].name}"/>
+                            <Run Text="{Binding genres[1].name}"/>
                         </TextBlock>
-                        <TextBlock Text="{Binding docs[0].rating.kp}" Foreground="#7D4192" 
+                        <TextBlock Text="{Binding rating.kp}" Foreground="#7D4192" 
                                    FontSize="20" Margin="9 0 0 0"/>
                     </StackPanel>
                 </StackPanel>
                 </Grid>
         </DataTemplate>
         
-        <DataTemplate x:Key="My.DataTemplates.ActorList" DataType="models:ActorList">
+        <DataTemplate x:Key="My.DataTemplates.ActorDoc" DataType="models:ActorDoc">
             <Grid ColumnDefinitions="55, 270" HorizontalAlignment="Center">
                 <Border Grid.Column="0" CornerRadius="5" BorderBrush="#B57CFF" BorderThickness="2"
                         HorizontalAlignment="Left">
@@ -47,17 +47,21 @@
                            HorizontalAlignment="Left"/>
                 </Border>
                 <StackPanel Grid.Column="1" Orientation="Vertical" VerticalAlignment="Center" ClipToBounds="True" HorizontalAlignment="Center">
-                    <TextBlock Text="{Binding docs[0].name}" Foreground="#5822B1"
-                               FontSize="20" VerticalAlignment="Center" HorizontalAlignment="Center" 
-                               TextAlignment="Center"/>
+                    <Button Background="Transparent" 
+                            Content="{Binding name}" 
+                            Foreground="#5822B1" Height="35"
+                            Command = "{Binding $parent[ListBox].((vm:SearchViewModel)DataContext).ActorSearchSwitch}"
+                            CommandParameter="{Binding }"
+                            Width="270" VerticalAlignment="Center" FontSize="20"
+                            HorizontalContentAlignment="Center" BorderThickness="0"/>
                     <StackPanel Orientation="Horizontal" VerticalAlignment="Center">
                         <TextBlock Foreground="#B57CFF" FontSize="17">
                             <Run Text="Год рождения:"/>
-                            <Run Text="{Binding docs[0].birthday}"/>
+                            <Run Text="{Binding birthday}"/>
                         </TextBlock>
                         <TextBlock Foreground="#7D4192"  FontSize="20" Margin="9 0 0 0">
                             <Run Text="Возраст:"/>
-                            <Run Text="{Binding docs[0].age}"/>
+                            <Run Text="{Binding age}"/>
                         </TextBlock>
                     </StackPanel>
                 </StackPanel>
@@ -66,35 +70,103 @@
     </UserControl.Resources>
 
     <UserControl.DataTemplates>
-        <DataTemplate DataType="models:BookmarkList">
+        <DataTemplate DataType="models:BookmarkDoc">
             <StackPanel Height="50" Margin="0 10 0 0 ">
-                <ContentControl Content="{Binding}" ContentTemplate="{DynamicResource My.DataTemplates.BookmarkList}" />
+                <ContentControl Content="{Binding}" ContentTemplate="{DynamicResource My.DataTemplates.BookmarkDoc}" />
             </StackPanel>
         </DataTemplate>
-        <DataTemplate DataType="models:ActorList">
+        <DataTemplate DataType="models:ActorDoc">
             <StackPanel Height="50" Margin="0 10 0 0 ">
-                <ContentControl Content="{Binding}" ContentTemplate="{DynamicResource My.DataTemplates.ActorList}" />
+                <ContentControl Content="{Binding}" ContentTemplate="{DynamicResource My.DataTemplates.ActorDoc}" />
             </StackPanel>
         </DataTemplate>
     </UserControl.DataTemplates>
 
-    <Grid Height="750" ClipToBounds="True" RowDefinitions="90, *, 200">
+    <Grid Height="750" ClipToBounds="True">
         
-        
-        
-        <!--<ContentControl Content="{Binding CurrentPage}"/>-->
-
-        
-        
-        <TextBlock Grid.Row="0" Text="Search results!" Foreground="#B57CFF" FontSize="35" Margin="15" HorizontalAlignment="Center"/>
-        <Grid Grid.Row="1" ColumnDefinitions="*, *" Height="525">
-            <ListBox Grid.Column="0" ItemsSource="{Binding Bookmarks}" Background="White"/>
-            <ListBox Grid.Column="1" ItemsSource="{Binding Actors}" Background="White"/>
+        <Grid IsVisible="{Binding IsSearchVisible}" RowDefinitions="90, *, 200">
+            <TextBlock Grid.Row="0" Text="Search results!" Foreground="#B57CFF" FontSize="35" Margin="15" HorizontalAlignment="Center"/>
+            <Grid Grid.Row="1" ColumnDefinitions="*, *" Height="525">
+                <ListBox Grid.Column="0" ItemsSource="{Binding Bookmarks}" Background="White"/>
+                <ListBox Grid.Column="1" ItemsSource="{Binding Actors}" Background="White"/>
+            </Grid>
+            <Image Grid.Row="2" Source="../Assets/Icons/toyger-cat.png" Height="100" Width="100" Stretch="Uniform" Margin="0 200 600 0"/>
+            <Image Grid.Row="2" Source="../Assets/Icons/butterfly.png" Height="40" Width="40" Stretch="Uniform" Margin="0 100 550 0"/>
         </Grid>
-        <Image Grid.Row="2" Source="../Assets/Icons/toyger-cat.png" Height="100" Width="100" Stretch="Uniform"
-               Margin="0 90 500 0"/>
-        <Image Grid.Row="2" Source="../Assets/Icons/butterfly.png" Height="40" Width="40" Stretch="Uniform"
-               Margin="0 0 350 0"/>
+        
+        
+        <Grid Width="850" Height="800" HorizontalAlignment="Center" VerticalAlignment="Center"
+          ColumnDefinitions="2*, 3*, 2*" Background="Transparent" Margin="10" 
+          IsVisible="{Binding IsMovieVisible}">
+            
+            <TextBlock Text="{Binding Message}"/>
+        <StackPanel Grid.Column="0" VerticalAlignment="Center" HorizontalAlignment="Center">
+            <Border BorderBrush="#B57CFF" BorderThickness="2" CornerRadius="5">
+                <Image Source="{Binding Poster}" Margin="10" Stretch="UniformToFill"
+                       Width="200" Height="350"/>
+            </Border>
+            <StackPanel Margin="0 15">
+                <TextBlock Foreground="#5822B1" FontSize="35" HorizontalAlignment="Center" Margin="5"
+                           Text="{Binding BookmarkDocA.rating.kp}"/>
+                <TextBlock Foreground="#B57CFF" FontSize="25" HorizontalAlignment="Center" Margin="5"
+                           Text="{Binding BookmarkDocA.votes.kp}"/>
+                <Button Content="{Binding Bookmarked}" CornerRadius="5" Background="Transparent" BorderBrush="#B57CFF"
+                        BorderThickness="2" Command="{Binding AddToBookmarksCommand}"/>
+            </StackPanel>
+        </StackPanel>
+        <StackPanel Grid.Column="1" Margin="10" VerticalAlignment="Center">
+            <TextBlock Text="{Binding BookmarkDocA.name}" 
+                       VerticalAlignment="Center" Foreground="#4F13B1" HorizontalAlignment="Center" FontSize="50" 
+                       TextWrapping="Wrap" TextAlignment="Center" Margin="17"/>
+            <StackPanel Margin="17">
+                <TextBlock HorizontalAlignment="Center" FontSize="20">
+                    <Run Text="genres:" Foreground="#742BEB"/>
+                    <Run Text="{Binding BookmarkDocA.genres[0].name}" Foreground="#B57CFF"/>
+                    <Run Text="," Foreground="#B57CFF"/>
+                    <Run Text="{Binding BookmarkDocA.genres[1].name}" Foreground="#B57CFF"/>
+                </TextBlock>
+                <TextBlock HorizontalAlignment="Center" FontSize="20">
+                    <Run Text="countries:" Foreground="#742BEB"/>
+                    <Run Text="{Binding BookmarkDocA.countries[0].name}" Foreground="#B57CFF"/>
+                </TextBlock>
+                <TextBlock HorizontalAlignment="Center" FontSize="20">
+                    <Run Text="length:" Foreground="#742BEB"/>
+                    <Run Text="{Binding BookmarkDocA.movieLength}" Foreground="#B57CFF"/>
+                </TextBlock>
+                <TextBlock HorizontalAlignment="Center" FontSize="20">
+                    <Run Text="age:" Foreground="#742BEB"/>
+                    <Run Text="{Binding BookmarkDocA.ageRating}" Foreground="#B57CFF"/>
+                    <Run Text="+" Foreground="#B57CFF"/>
+                </TextBlock>
+                <TextBlock HorizontalAlignment="Center" FontSize="20">
+                    <Run Text="release year:" Foreground="#742BEB"/>
+                    <Run Text="{Binding BookmarkDocA.year}" Foreground="#B57CFF"/>
+                </TextBlock>
+            </StackPanel>
+            <TextBlock Text="{Binding BookmarkDocA.description}" FontSize="20"
+                       HorizontalAlignment="Center" Foreground="#B57CFF" TextWrapping="Wrap" TextAlignment="Center"
+                       VerticalAlignment="Center" Margin="15"/>
+        </StackPanel>
+        <!--<Grid Grid.Column="2" Margin="10" VerticalAlignment="Center">
+            <Line StartPoint="0,0" EndPoint="0,260" Stroke="#DBBFFF" StrokeThickness="4"/>
+            <StackPanel Orientation="Vertical">
+                <TextBlock Text="Cast" HorizontalAlignment="Center" FontSize="20" Margin="13"
+                           Foreground="#742BEB" TextAlignment="Center"/>
+                <TextBlock Text="{Binding BookmarkDoc.persons[0].enName}" Foreground="#B57CFF"
+                           FontSize="20" Margin="6" HorizontalAlignment="Center" TextWrapping="Wrap"/>
+                <TextBlock Text="{Binding Bookmark.docs[0].persons[1].enName}" Foreground="#B57CFF"
+                           FontSize="20" Margin="6" HorizontalAlignment="Center" TextWrapping="Wrap"/>
+                <TextBlock Text="{Binding Bookmark.docs[0].persons[2].enName}" Foreground="#B57CFF"
+                           FontSize="20" Margin="6" HorizontalAlignment="Center" TextWrapping="Wrap"/>
+                <TextBlock Text="{Binding Bookmark.docs[0].persons[3].enName}" Foreground="#B57CFF"
+                           FontSize="20" Margin="6" HorizontalAlignment="Center" TextWrapping="Wrap"/>
+                <TextBlock Text="{Binding Bookmark.docs[0].persons[4].enName}" Foreground="#B57CFF"
+                           FontSize="20" Margin="6" HorizontalAlignment="Center" TextWrapping="Wrap"/>
+                <TextBlock Text="{Binding Bookmark.docs[0].persons[5].enName}" Foreground="#B57CFF"
+                           FontSize="20" Margin="6" HorizontalAlignment="Center" TextWrapping="Wrap"/>
+            </StackPanel>
+        </Grid>-->
+    </Grid>
     </Grid>
 </UserControl>
 <!--<Button Grid.Column="1" Width="50" Height="50" Background="Transparent">
